--- a/Leaflet.markercluster-1.4.1/example/geojson.html
+++ b/Leaflet.markercluster-1.4.1/example/geojson.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>NYUAD Micro-memories map</title>
+	<title>NYUAD MicroMemory Map</title>
 
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" integrity="sha512-07I2e+7D8p6he1SIM+1twR5TIrhUQn9+I6yjqD53JQjFiMf8EtC93ty0/5vJTZGF8aAocvHYNEDJajGdNx1IsQ==" crossorigin="" />
 	<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet-src.js" integrity="sha512-WXoSHqw/t26DszhdMhOXOkI7qCiv5QWXhH9R7CgvgZMHz1ImlkVQ3uNsiQKu5wwbbxtPzFXd1hK4tzno2VqhpA==" crossorigin=""></script>
@@ -25,12 +25,18 @@
 
 		var geoJsonData = {
 		"type": "FeatureCollection",
-		"name": "mapDemo",
+		"name": "map4326",
 		"crs": { "type": "name", "properties": { "name": "urn:ogc:def:crs:OGC:1.3:CRS84" } },
 		"features": [
-		{ "type": "Feature", "properties": { "Story title": "Final applause", "Building": "A4", "Room": "The Gazelle editing room", "Floor": 0, "latitude": 24.52332132, "longitude": 54.43391379, "MicroMemory Description": "In the newsroom of NYUAD's student-run, independent newspaper The Gazelle, weekly issues are published each Saturday evening. Former Chief Editor Laura Assanmal, from her joint interview with Kaashif Hajee, shares how as writers complete their pieces and stand up to leave for the night, a team tradition is to serve them a round of applause.", "Audio clip": "<a href=\"https:\/\/soundcloud.com\/user-823469341\/032_nyuad-memory_gazelle-editors\/s-4k4XyccDGsk?in=user-823469341\/sets\/nyuad-memory-project_map-of\/s-i5y4xOQm9pc&si=cbd58b9b08ba47cdb4f4be9d8cedd70e\">Listen to the story<\/a>", "Image": "<img src=\"https:\/\/github.com\/taylorhixson\/mmm\/blob\/main\/gazelle.png?raw=true\" alt=\"Screenshot from The Gazelle Previous issues page\">", "Finding aid": null, "img src": "Screenshot from The Gazelle Previous issues page" }, "geometry": { "type": "Point", "coordinates": [ 54.43391379, 24.52332132 ] } },
-		{ "type": "Feature", "properties": { "Story title": "Community Meal Mentors", "Building": "C3", "Room": "Arts Center", "Floor": 0, "latitude": 24.52340901, "longitude": 54.43587427, "MicroMemory Description": "NYUAD Arts Center Executive Director Bill Bragin shares an example of synergies created through one of the Center's valued traditions: community meals. ", "Audio clip": "<a href=\"https:\/\/soundcloud.com\/user-823469341\/013_nyuad-memory-project_arts-center-community-meals\/s-S8JTJ3eLKFf?si=10240fa2321f42ffaee672a184d09ca4\">Listen to the story<\/a>", "Image": "<img src=\"https:\/\/github.com\/taylorhixson\/mmm\/blob\/main\/arts.jpeg?raw=true\" alt=\"NYUAD Arts Center Logo\">", "Finding aid": null, "img src": "image saved from Arts Center Facebook page" }, "geometry": { "type": "Point", "coordinates": [ 54.43587427, 24.52340901 ] } },
-		{ "type": "Feature", "properties": { "Story title": "Dining Hall Family", "Building": "D2", "Room": "Dining Hall", "Floor": 0, "latitude": 24.52265494, "longitude": 54.4361532, "MicroMemory Description": "NYUAD Class of 2015 Alumna Krushika Patankar reflects on the community created between students and the dining hall staff, and how during her time at NYUAD, the relationship resembled a family.", "Audio clip": "<a href=\"https:\/\/soundcloud.com\/user-823469341\/027_nyuad-memory-project_alumna-krushika-patankar\/s-WJPtuHA1qV2?in=user-823469341\/sets\/nyuad-memory-project_map-of\/s-i5y4xOQm9pc&si=c59eafde586649b9b149037b9bb190bc\">Listen to the story<\/a>", "Image": "<img src=\"https:\/\/github.com\/taylorhixson\/mmm\/blob\/main\/dine.jpeg?raw=true\" alt=\"Three people at an NYUAD Dining Hall table\">", "Finding aid": null, "img src": "https:\/\/nyuad.nyu.edu\/en\/campus-life\/housing\/dining.html#tab-1-dining-halls" }, "geometry": { "type": "Point", "coordinates": [ 54.4361532, 24.52265494 ] } }
+		{ "type": "Feature", "properties": { "story title": "Final Applause", "macro location": "A4", "micro location": "The Gazelle editing room", "latitude": 24.52336257, "longitude": 54.43378058, "MicroMemory Description": "In the newsroom of NYUAD's student-run, independent newspaper The Gazelle, weekly issues are published each Saturday evening. Former Chief Editor Laura Assanmal, from her joint interview with Kaashif Hajee, shares how as writers complete their pieces and stand up to leave for the night, a team tradition is to serve them a round of applause." }, "geometry": { "type": "Point", "coordinates": [ 54.43378058, 24.52336257 ] } },
+		{ "type": "Feature", "properties": { "story title": "Cultural Nights & Emirati Cooking", "macro location": "A5C", "micro location": "FFIR apartment Adela and Matteo", "latitude": 24.52306852, "longitude": 54.43471131, "MicroMemory Description": "Faculty Fellows in Residence Matteo Marciano and Adela Kovarova remember fondly the various special events they've organized with students, especially \"Cultural Nights\" and Emirati Cooking." }, "geometry": { "type": "Point", "coordinates": [ 54.43471131, 24.52306852 ] } },
+		{ "type": "Feature", "properties": { "story title": "Let's Start a Startup", "macro location": "A6", "micro location": "StartAD", "latitude": 24.52239501, "longitude": 54.43535504, "MicroMemory Description": "NYUAD Class of 2021 senior YunKai \"Jonathan\" Lee, in his interview with friend and classmate Nurpeiis Baimukan, talks about the development of their EdTech startup \"Jagged,\" a mentorship \"swipe to match\" app that pairs high school students with students currently studying at their dream college to seek advice on student life, academics, and more. Here, Lee recalls a special moment under the palms. " }, "geometry": { "type": "Point", "coordinates": [ 54.435172800257646, 24.522551058248265 ] } },
+		{ "type": "Feature", "properties": { "story title": "Summer Rush: from Mussafah to Saadiyat Campus", "macro location": "C1", "micro location": "ERB", "latitude": 24.52526596, "longitude": 54.43325755, "MicroMemory Description": "Philip Panicker,  NYUAD'S Engineering Academic Laboratories Coordinator, remembers the busy summer of 2014 and shares his experience moving offices, instruments and lab equipment from the CSE building in Mussafah to their new homes on the Saadiyat campus." }, "geometry": { "type": "Point", "coordinates": [ 54.43325755, 24.52526596 ] } },
+		{ "type": "Feature", "properties": { "story title": "The Nook: A Space between counsellor and friend", "macro location": "C2", "micro location": "The Nook, 2nd Floor", "latitude": 24.52439846, "longitude": 54.43464962, "MicroMemory Description": "REACH stands for \"Raising Empowered Advocates for Community Health.\" NYUAD Alumna Nadeen Alalami recalls the development of The Nook, a space REACH developed to help every student feel safe and supported." }, "geometry": { "type": "Point", "coordinates": [ 54.43464962, 24.52439846 ] } },
+		{ "type": "Feature", "properties": { "story title": "Community Meal Mentors", "macro location": "C3", "micro location": "Arts Center", "latitude": 24.5234065, "longitude": 54.43586663, "MicroMemory Description": "NYUAD Arts Center Executive Director Bill Bragin shares an example of synergies created through one of the Center's valued traditions: community meals. " }, "geometry": { "type": "Point", "coordinates": [ 54.43586663, 24.5234065 ] } },
+		{ "type": "Feature", "properties": { "story title": "Unofficial Student Hub: The Equipment Center", "macro location": "C3", "micro location": "Equipment Center", "latitude": 24.5234065, "longitude": 54.43586663, "MicroMemory Description": "Inside C3, just past the entrance, is the Equipment Center. Arts faculty Amos Katz, one-time Equipment Center manager during the \"DTC days,\" reflects on the spirit and vibe of what he considers one of NYU Abu Dhabi's unofficial student hubs. " }, "geometry": { "type": "Point", "coordinates": [ 54.43586663, 24.5234065 ] } },
+		{ "type": "Feature", "properties": { "story title": "Dining Hall Family", "macro location": "D2", "micro location": "Dining Hall", "latitude": 24.52266222, "longitude": 54.4361429, "MicroMemory Description": "NYUAD Class of 2015 Alumna Krushika Patankar reflects on the community created between students and the dining hall staff, and how during her time at NYUAD, the relationship resembled a family." }, "geometry": { "type": "Point", "coordinates": [ 54.435824873782977, 24.522714236039668 ] } },
+		{ "type": "Feature", "properties": { "story title": "Designing a Plastic Recycling Machine", "macro location": "D2", "micro location": "NYUAD's Plastic Recycling Research Lab", "latitude": 24.52266222, "longitude": 54.4361429, "MicroMemory Description": "The origin story of the NYUAD Plastic Lab includes a student-driven quest to build a low-cost plastic recycling machine. Plastic Lab Founding Director and former NYUAD Faculty member Felix Beck talks about the Lab. He shares its origin story, its purpose, and the vision to contribute to NYU Abu Dhabi's commitment to environmental responsibility -- including a memory of a junkyard visit so students could source materials to build a zero-waste recycling machine." }, "geometry": { "type": "Point", "coordinates": [ 54.435824873782977, 24.522714236039668 ] } }
 		]
 		}
 
@@ -54,14 +60,14 @@
 			},
 
 			onEachFeature: function (feature, layer) {
-				var popupText = '<b>Story title</b>: ' + feature.properties['Story title'];
+				var popupText = '<b>Story title</b>: ' + feature.properties['story title'];
 
-				if (feature.properties['Building']) {
-					popupText += '<br/><br/><b>Building</b>: ' + feature.properties['Building'] ;
+				if (feature.properties['macro location']) {
+					popupText += '<br/><br/><b>Building</b>: ' + feature.properties['macro location'] ;
 				}
 
-				if (feature.properties['Room']) {
-					popupText += ' <b>Room</b>: ' + feature.properties['Room'];
+				if (feature.properties['micro location']) {
+					popupText += ' <br/><br/><b>Room</b>: ' + feature.properties['micro location'];
 				}
 
 				if (feature.properties['MicroMemory Description']) {
