--- a/Leaflet.markercluster-1.4.1/example/geojson.html
+++ b/Leaflet.markercluster-1.4.1/example/geojson.html
@@ -12,8 +12,17 @@
 	<link rel="stylesheet" href="../dist/MarkerCluster.Default.css" />
 	<script src="../dist/leaflet.markercluster-src.js"></script>
 
+	<meta name="DC.creator" content="Hixson,Taylor" />
+  <meta name="email:creator" content="twh2@nyu.edu" />
+  <meta name="DC.description" content="Locations from NYUAD Memory Project story excerpts." />
+  <meta property="description" content="Locations from NYUAD Memory Project story excerpts." />
+  <meta name="DC.created" content="2021-11-17">
+  <meta name="DC.date" content="2021-11-17">
+  <meta property="og:locale" content="en_US" />
+
 	<style>
-	#map {width: 100% }
+	#map {
+		width: 100% }
 	</style>
 
 </head>
