--- a/Leaflet.markercluster-1.4.1/example/geojson.html
+++ b/Leaflet.markercluster-1.4.1/example/geojson.html
@@ -12,6 +12,14 @@
 	<link rel="stylesheet" href="../dist/MarkerCluster.Default.css" />
 	<script src="../dist/leaflet.markercluster-src.js"></script>
 
+	<!-- Mobile meta tags to go in head-->
+	<meta name="HandheldFriendly" content="True">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="MobileOptimized" content="320"/>
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta http-equiv="cleartype" content="on">
+
+	<!-- Metadata-->
 	<meta name="DC.creator" content="Hixson,Taylor" />
   <meta name="email:creator" content="twh2@nyu.edu" />
   <meta name="DC.description" content="Locations from NYUAD Memory Project story excerpts." />
@@ -22,8 +30,8 @@
 
 	<style>
 	#map {
-		width: 100%;
-	 	overflow-y: hidden;}
+		width: 100%
+	}
 	</style>
 
 </head>
